<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">caculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_">=</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>

    <string-array name="place">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string name="title_activity_suggest_tip">SuggestTip</string>

</resources>
