<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="5dp"
    android:stretchColumns="1,2,3" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Tip/Person"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:text="0.0"
            android:textColor="#FFFFFF"
            android:width="60dp" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Total/Person"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:text="0.0"
            android:textColor="#FFFFFF"
            android:width="60dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bill Total"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:text="0.0"
            android:textColor="#3399ff"
            android:textSize="22sp"
            android:width="60dp" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:text="Rating"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="right"
            android:minWidth="100dp" >

            <RatingBar
                android:id="@+id/ratingBar1"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:background="#000000"
                android:max="5"
                android:minHeight="20dp"
                android:mirrorForRtl="false"
                android:numStars="5"
                android:rating="3.1"
                android:stepSize="0.99" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" >
    </TableRow>

    <TableRow
        android:id="@+id/tableRow_81"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:minHeight="2dp" >

        <TextView
            android:id="@+id/textView_41"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:maxWidth="50dp"
            android:text="Number of People"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:hint="0"
            android:longClickable="true"
            android:minHeight="20dp"
            android:onClick="peopleClick"
            android:textSize="25dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow_181"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:minHeight="2dp" >

        <TextView
            android:id="@+id/textView_141"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:maxWidth="50dp"
            android:text="The bill"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_131"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:hint="0.0"
            android:longClickable="true"
            android:minHeight="20dp"
            android:onClick="billClick"
            android:textSize="25sp" />

    </TableRow>
    
    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button10"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/_1"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button12"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="45dp"
                android:onClick="btn02Click"
                android:text="@string/_2"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="45dp"
                android:onClick="btn03Click"
                android:text="@string/_3"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="."
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button06"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/_4"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button08"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="45dp"
                android:onClick="btn05Click"
                android:text="@string/_5"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button07"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/_6"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnCClick"
                android:text="@string/c"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button02"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/_7"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button04"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="45dp"
                android:onClick="btn08Click"
                android:text="@string/_8"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button03"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/_9"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/Button01"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="CLEAR"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbersLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="45dp"
                android:onClick="btn00Click"
                android:text="@string/_0"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDoneClick"
                android:text="Done"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button16"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="Tip Calculator"
                android:textColor="#ffffff"
                android:background="#757575"
                android:textSize="11dp" />

            <Button
                android:id="@+id/Button15"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="45dp"
                android:onClick="btn03Click"
                android:text="Suggest a tip"
                android:textColor="#ffffff"
                android:background="#757575"
                android:textSize="11dp" />

            <Button
                android:id="@+id/Button13"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="Setting"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:background="#757575"
                android:textSize="11dp" />

        </LinearLayout>
    </LinearLayout>

</TableLayout>